Add accept menu to admin

--- a/src/main/webapp/html/sumo/definition_en.html
+++ b/src/main/webapp/html/sumo/definition_en.html
@@ -1,1 +1,2 @@
-<p>Definitions in english</p>
+<p>AbraCadabre<img alt="angel" src="http://localhost:8080/robotic/ckeditor/plugins/smiley/images/angel_smile.png"
+                   style="height:23px; width:23px" title="angel"/>123123</p>
