--- a/src/main/webapp/html/sumo/definition_lv.html
+++ b/src/main/webapp/html/sumo/definition_lv.html
@@ -1,2 +1,5 @@
-<p>Šajās sacensībās dalībniekam ir jāsagatavo autonoms robots, kurš spēj maksimāli efektīvi izstumt pretinieka robotu ārpus ringa baltās līnijas.</p>
-<p>Katrā mačā savā starpā sacenšas divas komandas. Tikai viens komandas dalībnieks drīkst atrasties pie ringa, pārējiem komandas locekļiem jāvēro cīņa no auditorijas.</p>
+<p>&Scaron;ajās sacensībās dalībniekam ir jāsagatavo autonoms robots, kur&scaron; spēj maksimāli efektīvi izstumt
+    pretinieka robotu ārpus ringa baltās līnijas.</p>
+
+<p>Katrā mačā savā starpā sacen&scaron;as divas komandas. Tikai viens komandas dalībnieks drīkst atrasties pie ringa,
+    pārējiem komandas locekļiem jāvēro cīņa no auditorijas.</p>
