--- a/src/main/webapp/html/sumo/definition_ru.html
+++ b/src/main/webapp/html/sumo/definition_ru.html
@@ -1,4 +1,5 @@
-        <p>В этом состязании участникам необходимо подготовить автономного робота, способного наиболее эффективно
-            выталкивать робота-противника за пределы белой линии ринга.<br></p>
-        <p>В каждом матче соревнуются между собой две команды. Только один участник команды может находиться
-            у ринга, остальные члены команды должны наблюдать из аудитории.</p>
+<p>В этом состязании участникам необходимо подготовить автономного робота, способного наиболее эффективно выталкивать
+    робота-противника за пределы белой линии ринга.</p>
+
+<p>В каждом матче соревнуются между собой две команды. Только один участник команды может находиться у ринга, остальные
+    члены команды должны наблюдать из аудитории.</p>
